--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "devDependencies": {
     "@playwright/test": "^1.51.1",
-    "@types/node": "^22.13.12"
+    "@types/node": "^22.13.12",
+    "allure-playwright": "^3.2.1"
   },
   "dependencies": {
     "dotenv": "^16.4.7"
